playground/notas_tests/valid/inf-06.hulk
function add(a:Number, b:Number):Number => a + b;
print(add(3, 4));
