playground/notas_tests/invalid/inf-08.hulk
function bad(x) => x + (x @ "a");
